Fix image thumbnail cropping centering

--- a/public/css/web.css
+++ b/public/css/web.css
@@ -134,7 +134,6 @@ p {
 
 .music-video-link-thumbnail img, .entry-type-thumbnail img {
 	position: absolute;
-	top: 0;
 	height: 150%;
 	min-width: 100%;
 	min-height: 100%;
